--- a/apikeyAuthorizer/package.json
+++ b/apikeyAuthorizer/package.json
@@ -21,11 +21,11 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
-    "sonarqube-scanner": "^2.8.2"
+    "sonarqube-scanner": "^2.8.2",
+    "@babel/traverse": "^7.23.2"
   },
   "dependencies": {
     "aws-xray-sdk-core": "^3.3.6",
-    "sinon": "^14.0.0",
-    "@babel/traverse": "7.23.2"
+    "sinon": "^14.0.0"
   }
 }
