--- a/apikeyAuthorizerV2/package.json
+++ b/apikeyAuthorizerV2/package.json
@@ -25,7 +25,8 @@
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "sonarqube-scanner": "^2.8.2",
-    "sinon": "^14.0.0"
+    "sinon": "^14.0.0",
+    "@babel/traverse": "^7.23.2"
   },
   "dependencies": {
     "aws-xray-sdk-core": "^3.3.6",
