--- a/backofficeAuthorizer/package.json
+++ b/backofficeAuthorizer/package.json
@@ -26,7 +26,8 @@
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "sinon": "^15.0.1",
-    "sonarqube-scanner": "^2.8.2"
+    "sonarqube-scanner": "^2.8.2",
+    "@babel/traverse": "^7.23.2"
   },
   "dependencies": {
     "aws-jwt-verify": "^3.3.0",
