--- a/jwtAuthorizer/package.json
+++ b/jwtAuthorizer/package.json
@@ -28,6 +28,7 @@
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "rewire": "^6.0.0",
-    "sonarqube-scanner": "^2.8.2"
+    "sonarqube-scanner": "^2.8.2",
+    "@babel/traverse": "^7.23.2"
   }
 }
