--- a/tokenExchange/package.json
+++ b/tokenExchange/package.json
@@ -26,7 +26,8 @@
     "proxyquire": "^2.1.3",
     "rewire": "^6.0.0",
     "sinon": "^14.0.0",
-    "sonarqube-scanner": "^2.8.2"
+    "sonarqube-scanner": "^2.8.2",
+    "@babel/traverse": "^7.23.2"
   },
   "dependencies": {
     "aws-xray-sdk-core": "^3.3.6",
