--- a/backofficeAuthorizer/package.json
+++ b/backofficeAuthorizer/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/traverse": "^7.23.2",
     "aws-sdk-client-mock": "^3.0.0",
     "chai": "^4.3.6",
     "lambda-tester": "^4.0.1",
@@ -20,14 +21,13 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "sinon": "^15.0.1",
-    "sonarqube-scanner": "^2.8.2",
-    "@babel/traverse": "^7.23.2"
+    "sonarqube-scanner": "^2.8.2"
   },
   "dependencies": {
-    "aws-jwt-verify": "^3.3.0",
-    "js-yaml": "^4.1.0",
     "@aws-sdk/client-api-gateway": "^3.252.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.252.0",
-    "@aws-sdk/client-s3": "^3.252.0"
+    "@aws-sdk/client-s3": "^3.252.0",
+    "aws-jwt-verify": "^3.3.0",
+    "js-yaml": "^4.1.0"
   }
 }
