--- a/tokenExchange/package.json
+++ b/tokenExchange/package.json
@@ -13,8 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios-mock-adapter": "^1.20.0",
+    "@babel/traverse": "^7.23.2",
     "aws-sdk-client-mock": "^3.0.0",
+    "axios-mock-adapter": "^1.20.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "dependency-check": "^4.1.0",
@@ -25,8 +26,7 @@
     "proxyquire": "^2.1.3",
     "rewire": "^6.0.0",
     "sinon": "^14.0.0",
-    "sonarqube-scanner": "^2.8.2",
-    "@babel/traverse": "^7.23.2"
+    "sonarqube-scanner": "^2.8.2"
   },
   "dependencies": {
     "@aws-sdk/client-kms": "^3.413.0",
